--- a/public/css/mukto-style.css
+++ b/public/css/mukto-style.css
@@ -1,5 +1,9 @@
+  body{
+    background-color: #fcfcfc;
+  }
+
  #footer{
-    background-color: #222;
+    background-color: #4b4f56;
     
     padding-top: 25px;
   }
@@ -12,11 +16,11 @@
     margin-left: 97px;
   }
    #footer li a{
-    color:#9fa6ad;
+    color:#bdc1c8;
     padding-left: 0px;
    }
     #footer  a{
-    color:#9fa6ad;
+    color:#7b7e86;
    text-align: left;
    }
    input[type=text]{
@@ -558,4 +562,68 @@ background-color: #000;
  padding-bottom:3px;
  padding-top:10px;
  background-color:#e7e7e7;
+}
+.pic-thumbnail{
+  float: right;
+  margin-top:0px;
+  width:168px;
+  height:168px;
+background:#7f7f7f;
+}
+.profile-nav{
+  margin-top:110px;
+  padding-bottom:27px;
+ 
+}
+
+.profile-nav ul{
+  overflow:hidden;
+  list-style-type:none;
+}
+
+.profile-nav ul li a{
+  float: left;
+  padding-right: 30px;
+  border-right: 2px solid grey;
+  margin-right: 40px;
+  font-size: 15px;
+  font-weight: bold;
+ 
+  
+}
+.profile-nav ul li a:hover{
+
+  text-decoration: none;
+
+}
+ .active:hover{
+  text-decoration: none;
+}
+.join{
+  float:right;
+  margin-right: 100px;
+  font-size: 14px;
+  font-weight: bold;
+  color:black;
+}
+.prof_body{
+  margin-top: -20px;
+  padding-top: 20px;
+  background-color: #efebeb;
+}
+table, th, td {
+    border-bottom: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    text-align: center;
+    border-collapse: collapse;
+ margin-bottom: 10px;
+}
+th{
+   width: 30%;
+
+}
+th,td{
+    padding: 30px;
+    text-align: left;
+   
 }
